kubernetes/databases/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  ports:
    - port: 3004
  selector:
    app.kubernetes.io/name: pgadmin
  type: ClusterIP
