kubernetes/databases/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: pgadmin
spec:
  ingressClassName: "nginx"
  rules:
    - host: pgadmin.kryoseu.com
      http:
        paths:
          - backend:
              service:
                name: pgadmin
                port:
                  number: 3004
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pgadmin.kryoseu.com
      secretName: pgadmin-tls-prod
